# tau-core

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  PRD.md  README.md  dist.sh  libexample_plugin.dylib  libtest_deeper_plugin.dylib  libtokio_test_plugin.dylib  patches.list  progress.txt
.cargo/: config.toml
crates/tau/: Cargo.toml
crates/tau-host/: Cargo.toml  build.rs
crates/tau-host/benches/: executor.rs
crates/tau-host/src/: compiler.rs  lib.rs  main.rs  tls.c
crates/tau-host/src/runtime/: events.rs  executor.rs  mod.rs  plugin_guard.rs  process.rs  reactor.rs  resources.rs  streams.rs  sync.rs
crates/tau-host/tests/: io_tests.rs
crates/tau-loom-tests/: Cargo.toml
crates/tau-loom-tests/src/: lib.rs
crates/tau-rt/: Cargo.toml  build.rs
crates/tau-rt/src/: event.rs  executor.rs  ffi.rs  io.rs  lib.rs  process.rs  resource.rs  runtime.rs  types.rs
crates/tau-tokio/: Cargo.toml  build.rs
crates/tau-tokio/src/: lib.rs
crates/tau-tokio/src/fs/: mod.rs
crates/tau-tokio/src/io/: mod.rs
crates/tau-tokio/src/net/: mod.rs
crates/tau-tokio/src/process/: mod.rs
crates/tau-tokio/src/runtime/: mod.rs
crates/tau-tokio/src/signal/: mod.rs
crates/tau-tokio/src/sync/: mod.rs  mpsc.rs  mutex.rs  notify.rs  oneshot.rs  rwlock.rs  semaphore.rs  watch.rs
crates/tau-tokio/src/task/: mod.rs
crates/tau-tokio/src/time/: mod.rs
crates/tau-tui/: Cargo.toml
crates/tau-tui/src/: component.rs  lib.rs  terminal.rs  utils.rs
crates/tau/src/: event.rs  guard.rs  io.rs  lib.rs  plugin.rs  resource.rs  stream.rs
crates/tau/src/stream/: combinators.rs  consumers.rs  mod.rs  tests.rs
example-plugin/: Cargo.toml
example-plugin/src/: lib.rs
host/: Cargo.toml  build.rs
host/src/: compiler.rs  main.rs
host/src/runtime/: executor.rs  mod.rs
plugins/abort-test-plugin/: Cargo.toml
plugins/abort-test-plugin/src/: lib.rs
plugins/crossterm-test-plugin/: Cargo.toml
plugins/crossterm-test-plugin/src/: lib.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/http-plugin/: Cargo.toml
plugins/http-plugin/src/: lib.rs
plugins/kube-plugin/: Cargo.toml
plugins/kube-plugin/src/: lib.rs
plugins/process-test-plugin/: Cargo.toml
plugins/process-test-plugin/src/: lib.rs
plugins/second-plugin/: Cargo.toml
plugins/second-plugin/src/: lib.rs
plugins/stream-test-plugin/: Cargo.toml
plugins/stream-test-plugin/src/: lib.rs
secret-extern-test/: Cargo.toml
secret-extern-test/src/: lib.rs
serde-shim/: Cargo.toml
serde-shim/src/: lib.rs
tau/src/: lib.rs  runtime.rs  types.rs
taukio/: Cargo.toml
taukio/src/: lib.rs
test-deeper-plugin/: Cargo.toml
test-deeper-plugin/src/: lib.rs
tests/: test-abort.sh  test-abort.txt  test-crash.txt  test-crossterm.sh  test-crossterm.txt  test-process.out  test-process.sh  test-process.txt  test-reload-dist.sh  test-reload.sh  test-reload.txt  test-safety.sh  test-safety.txt
tokio-test-plugin/: Cargo.toml
tokio-test-plugin/src/: lib.rs
xtask/src/: main.rs
