[package]
name = "tau-host"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
libc = "0.2"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tau = { path = "../tau" }
tokio = { version = "1", features = ["full"] }
