[package]
name = "test-deeper-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tau = { path = "../tau" }
# Use semver-compatible version requirement (will use vendored 1.0.228)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
