[package]
name = "tau-host"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "tau"
path = "src/main.rs"

[[bench]]
name = "executor"
harness = false

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tau-rt = { path = "../tau-rt" }
tau = { path = "../tau" }
polling = "3"
crossbeam-queue = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
smol = "2"
futures = "0.3"

[build-dependencies]
cc = "1"
