[package]
name = "tau-loom-tests"
version = "0.1.0"
edition = "2021"
publish = false

# This crate exists solely for loom testing of concurrency primitives.
# It's separate because loom cfg breaks concurrent-queue (smol dependency).

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
