[package]
name = "tau"
version = "0.1.0"
edition = "2021"
description = "Tau plugin SDK — statically compiled into each plugin"

[lib]
crate-type = ["rlib"]

[features]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
tau-rt = { path = "../tau-rt" }
futures-core = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
