[package]
name = "crossterm-test-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
tau = { version = "0.1" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
