[package]
name = "http-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
tau = { version = "0.1" }
tokio = { version = "1", features = ["sync"] }
# reqwest pulls in hyper → http-body → futures-core
# This verifies futures-core resolves to ONE copy (same as tau's)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures-core = "0.3"
