[package]
name = "kube-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
tau = { version = "0.1" }
tokio = { version = "1", features = ["sync"] }
# kube with runtime feature pulls in kube-runtime → futures-core, async-broadcast, etc.
# This verifies futures-core resolves to ONE copy (same as tau's)
kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
futures-core = "0.3"
